objects/EC_AccObj1__c.object
<CustomObject>
    <description>New4444</description>
    <fields>
        <fullName>ECOBjField1__c</fullName>
        <description>test674</description>
        <label>ECOBjField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <description>New89765414</description>
        <label>Field2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickLIstField__c</fullName>
        <description>test</description>
        <label>PickLIstField</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <label>Picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistFeidl1__c</fullName>
        <label>PicklistFeidl1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklists7__c</fullName>
        <label>Picklists7</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Piclist10__c</fullName>
        <label>Piclist10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dfd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Piclist8__c</fullName>
        <label>Piclist8</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>lk;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pikclist4__c</fullName>
        <label>Pikclist4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pl3__c</fullName>
        <description>1143</description>
        <label>Pl3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>picklist567__c</fullName>
        <label>picklist567</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>piclisit9__c</fullName>
        <label>piclisit9</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EC-AccObj1</label>
    <nameField>
        <label>EC-AccObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECAccObj1s</pluralLabel>
    <recordTypes>
        <fullName>ECrecordTypeTest3</fullName>
        <active>true</active>
        <label>ECrecordTypeTest3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test1</fullName>
        <active>true</active>
        <label>Test1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ECVRule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  ECOBjField1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
</CustomObject>